# newsflash

./: .gitignore  requirements.txt  setup.cfg
newsflash/: constants.py  script.py
tests/newsflash/: test_script.py
